Initiating operations of iremboPay from clinicians

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -15,3 +15,6 @@ rwandaemr.hie.viewObs.title = Preview HIE Observation
 rwandaemr.hie.done = Done
 rwandaemr.hie.viewObs.instructions = Listing of Observation
 rwandaemr.hie.encounterLis.actions = Actions
+rwandaemr.billing.waitingPayment = Waiting for payment
+rwandaemr.billing.paid = Paid
+rwandaemr.billing.retry = Retry
